Add youtube widget with functionality and style

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,6 +26,9 @@
       ],
       "js": [
         "content.js"
+      ],
+      "css": [
+        "/content_styles/styles.css"
       ]
     }
   ],
